@@ -3302,7 +3302,6 @@ TclEvalObjvInternal(
 	}
     }
 
-
     /*
      * Record the calling objc/objv except if requested not to
      */
@@ -3402,16 +3401,27 @@ TclEvalObjvInternal(
 	if (iPtr->tracePtr != NULL && traceCode == TCL_OK) {
 	    traceCode = TclCheckInterpTraces(interp, command, length,
 		    cmdPtr, code, TCL_TRACE_ENTER_EXEC, objc, objv);
+	    checkTraces = 0;
 	}
 	if ((cmdPtr->flags & CMD_HAS_EXEC_TRACES) && (traceCode == TCL_OK)) {
 	    traceCode = TclCheckExecutionTraces(interp, command, length,
 		    cmdPtr, code, TCL_TRACE_ENTER_EXEC, objc, objv);
+	    checkTraces = 0;
 	}
 	cmdPtr->refCount--;
+
+	/*
+	 * Restore the calling objc/objv, in case it was spoiled by traces 
+	 */
+	
+	if (!(checktraces && (flags & TCL_EVAL_NOREWRITE)) {
+	    iPtr->callObjc = objc;
+	    iPtr->callObjv = objv;
+	}
+	
     }
     if (cmdEpoch != cmdPtr->cmdEpoch) {
 	/* The command has been modified in some way. */
-	checkTraces = 0;
 	goto reparseBecauseOfTraces;
     }
 
