@@ -1,10 +1,16 @@
+2006-10-30  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c (TEOVI): insured that the interp's callObjc/v
+	fields are restored after traces run, as they be spoiled. This was
+	causing a segfault in tcllib's profiler tests. 
+	
 2006-10-30  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclExecute.c (INST_MOD):	Corrected improper testing of
 	* tests/expr.test:	the sign of bignums when applying Tcl's
 	division rules.  Thanks to Peter Spjuth.  [Bug 1585704]
 
-2006-10-26  Miguel Sofer  <msofer@users.sf.net>
+2006-10-29  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclNamesp.c (EnsembleImplementationCmd):
 	* tests/namespace.test (47.7-8): reverted a wrong "optimisation" that
